...
const kAvailableBalance = Kobo(24835075);

final kTierLimit = Kobo.fromNaira(50000);

const kRecentRecipients = <RecipientModel>[
  RecipientModel(
    name: 'Tunde Bakare',
    bank: 'Access Bank',
    accountNumber: '1234894821',
  ),
  RecipientModel(
    name: 'Aisha Bello',
    bank: 'Kuda',
...
